--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "email": "anubhav.srivastava00@gmail.com"
   },
   "dependencies": {
+    "bootstrap": "^4.5.0",
     "gatsby": "^2.4.3",
     "gatsby-plugin-manifest": "^2.1.1",
     "gatsby-plugin-offline": "^3.1.0",
@@ -18,6 +19,7 @@
     "gatsby-plugin-sass": "^2.0.11",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.2.2",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
     "react-images": "^1.1.0",
