--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-offline": "^3.1.0",
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sass": "^2.0.11",
+    "material-design-icons": "^3.0.1",
     "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-bootstrap": "^1.2.2",
